namespace/media/jellfin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.oglesby.io`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
